--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -57,3 +57,7 @@ body {
   transition: transform 0.6s;
   transform-style: preserve-3d;
 }
+
+.theme-gradient-blue {
+  @apply bg-gradient-to-r from-[#FFFFFF] to-[#55BBF9]/30;
+}
