refactor: Adjust careers-carousel styles for improved transition effects and visual consistency

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -66,11 +66,11 @@ body {
 }
 
 .careers-carousel .slick-slide.slick-current {
-  @apply scale-[1.5] brightness-[1] z-10 relative transition-all duration-500;
+  @apply scale-[1.5] brightness-[1] z-10 relative;
 }
 
 .careers-carousel .slick-slide {
-  @apply scale-100 brightness-[0.6];
+  @apply scale-100 brightness-[0.6] transition-all duration-500;
 }
 
 .careers-carousel .slick-slide.slick-slide.slick-current h3 {
